upgrade: 依存関係を更新
Signed-off-by: SlashNephy <slashnephy@hatena.ne.jp>